# tir-pukiwiki

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/tir_pukiwiki/: cli.py  parser.py
tests/: run.sh
tests/cases/help/: out-expected.txt  run.sh
tests/cases/parse-file/: out-expected.txt  run.sh
tests/cases/parse-pipe/: out-expected.txt  run.sh
tests/cases/parse-stdin/: run.sh
tests/cases/rg_no_ascii/: out-expected.txt  run.sh
tests/cases/unparse/: out-expected.txt  run.sh
tests/data/: complex.tir  sample.pukiwiki
